Import of RANI/Class-Phrasebook-0.86 from CPAN.
gitpan-cpan-distribution: Class-Phrasebook
gitpan-cpan-version:      0.86
gitpan-cpan-path:         RANI/Class-Phrasebook-0.86.tar.gz
gitpan-cpan-author:       RANI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Class::Phrasebook.
 
+0.86  Fri Nov  8 21:36:48 CET 2002
+	- Fixed a bug on Windows OS where absolute path was not 
+	  identified correctly. 
+	  Thanks for Andrew Alakozow that reported the bug and 
+	  supplied a patch.	
+
 0.85  Tue Sep 24 14:11:39 CEST 2002
         - Just fixed the copyright notice.  
 
